# hexallabs

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_tables.py  pyproject.toml  requirements.txt  test_db.py  test_live.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_scout_enum.py  0003_user_quota.py  0004_quota_window_start_timestamp.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py
backend/app/api/: debug.py  prompt_forge.py  query.py  quota.py
backend/app/auth/: __init__.py  jwt.py  middleware.py  mock.py  models.py
backend/app/billing/: config.py  quota.py
backend/app/council/: stream.py
backend/app/db/: __init__.py  session.py
backend/app/lens/: analyzer.py
backend/app/llm/: anthropic_client.py  base.py  (+2 more)
backend/migrations/: 0001_workspace_columns.sql
backend/postman/: hexallabs-all-in-one.postman_collection.json  hexallabs-fastapi.postman_collection.json  hexallabs-local.postman_environment.json
backend/scripts/: apply_supabase_migrations.py  generate_static_dev_jwt.py  test_db.py
backend/tests/: conftest.py  test_anthropic_client.py  test_apex_synthesis.py  test_auth_middleware.py  test_azure_client.py  test_base.py  test_billing_quota.py  test_config.py  test_council_scout.py  test_council_stream.py  test_db_session.py  test_debug_invoke.py  test_factory.py  test_health.py  test_jwt.py  test_oracle_primal.py  test_oracle_scout.py  test_oracle_scout_loop.py  test_oracle_sse.py  test_prompt_forge.py  test_prompt_lens.py  test_query_validation.py  test_relay_scout.py  test_relay_sse.py  test_scout_helper.py  test_session_reuse.py  test_sse_events.py  test_tools_web_search.py  test_workflow_executor.py  test_workflow_scout.py
(+208 files in other folders)
