[project]
name = "hexallabs-backend"
version = "0.1.0"
description = "HexalLabs FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "azure-identity>=1.19.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
    "azure-ai-inference>=1.0.0b9",
    "aiohttp>=3.13.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
